Corrections swagger
