# src/routes/personaRoutes.js
@@ -5,7 +5,6 @@ const personaValidation = require('../middlewares/personaValidationMiddleware');
 const { authMiddleware, isAdmin, isEmpleado } = require('../middlewares/authMiddleware');
 
 // Rutas para el perfil personal del usuario autenticado
-personaRouter.get('/perfil', authMiddleware, personaController.getOwnProfile);
 personaRouter.post('/persona', [authMiddleware, personaValidation.validateCreatePersona], personaController.createPersona);
 personaRouter.put('/persona', [authMiddleware, personaValidation.validateUpdatePersona], personaController.updatePersona);
 
